--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "apollo-server-express": "^3.0.1",
     "bootstrap": "^4.4.1",
+    "express": "^4.17.1",
     "graphql": "^15.5.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
