--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "concurrently": "^5.3.0"
   },
   "dependencies": {
+    "apollo-server-express": "^3.0.1",
+    "express": "^4.17.1",
     "graphql": "^15.5.1",
-    "graphql-tag": "^2.12.5"
+    "graphql-tag": "^2.12.5",
+    "mongoose": "^5.13.3"
   }
 }
