--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://127.0.0.1:3001/",
+  "proxy": "http://localhost:3001",
   "secure": false,
   "dependencies": {
     "@apollo/client": "^3.3.7",
