--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.17.1",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
-    "mongoose": "^5.13.3"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.13.3",
+    "nodemon": "^2.0.12"
   }
 }
